[package]
name = "dracoon-oxide"
version = "0.1.0"
authors = ["Octavio Simone <octsim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = {version="0.11.4", features=["json"]}
serde = {version="1.0.130", features=["derive"]}
tokio = {version = "1.13.0", features = ["full"]}
base64 = "0.13.0"